--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "VideoCompressBot",
   "description": "Telegram's best Video Compress Bot",
-  "logo": "https://telegra.ph/file/b687febf32e4d583fb1d4.jpg",
+  "logo": "https://telegra.ph/file/587e78b1375927d0cd3b8.jpg",
   "keywords": [
     "telegram",
     "best",
@@ -9,9 +9,9 @@
     "compress",
     "bot"
   ],
-  "success_url": "https://t.me/linux_repo",
-  "website": "https://t.me/Discovery_Updates",
-  "repository": "https://github.com/AbirHasan2005/VideoCompress",
+  "success_url": "https://t.me/AnimeKunChannel",
+  "website": "https://t.me/Anime_Kun_Channel",
+  "repository": "https://github.com/Chowdhury-Siam/Compressor-Bot-V2",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable VARs when in ENV mode",
@@ -19,7 +19,7 @@
     },
     "SESSION_NAME": {
       "description": "Keep this default",
-      "value": "AHCompressBot",
+      "value": "CompressBot",
       "required": true
     },
     "TG_BOT_TOKEN": {
@@ -43,13 +43,13 @@
       "required": true
     },
     "LOG_CHANNEL": {
-      "description": "Your Bot's Log Channel's Username. For Help ask in @linux_repo",
+      "description": "Your Bot's Log Channel's Username. For Help ask in @AnimeKunChannel",
       "value": "",
       "required": true
     },
     "AUTH_USERS": {
       "description": "Allow only pre-defined users to use this bot as Sudo User. Separate with Space. Just for using Admin Commands.",
-      "value": "1666551439",
+      "value": "5971676967",
       "required": true
     }
   },
